welcome.lessons.welcome.variables.Variables.scala.error
Variables:2: error: forward reference extends over definition of variable nbPas
nbPas==0
^