welcome.lessons.welcome.variables.Variables.scala.code
nbPas==0
var nbPas: Int= nbPas+1
while(!estSurBiscuit){
	avance()


}
prendBiscuit();poseBiscuit()
